--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,8 @@
                                 <input class="u-full-width obligatorio" type="number" validador="number" placeholder="10" id="robot_peso">
                             </div>
                             <div class="six column">
-                                <label for="exampleRecipientInput">Categoria</label>
-                                <select class="u-full-width" id="exampleRecipientInput">
+                                <label for="categoria_input">Categoria</label>
+                                <select class="u-full-width" id="categoria_input">
                                     <option value="Option 1">Seguidor de Línea</option>
                                     <option value="Option 2">Sumo</option>
                                     <option value="Option 3">Mini-Sumo</option>
@@ -49,8 +49,8 @@
                                 </select>
                             </div>
                             <div class="six column">
-                                <label for="escuelaInput">Escuela</label>
-                                <select class="u-full-width" id="escuelaInput">
+                                <label for="escuela_input">Escuela</label>
+                                <select class="u-full-width" id="escuela_input">
                                     <option value="Option 1">724</option>
                                     <option value="Option 2">723</option>
                                     <option value="Option 3">722</option>
