terminando pagina de inicio

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,111 +1,135 @@
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="statics/css/normalize.css">
-        <link rel="stylesheet" href="statics/css/skeleton.css">
-        <link rel="stylesheet" href="statics/css/custom.css">
-        <link rel="stylesheet" href="statics/css/font-awesome.min.css">
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="statics/js/custom.js"></script>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-      <!-- INICIO DEL MEMBRETE -->
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>Campeonato de Robótica y Hackathon 2017</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="statics/css/normalize.css">
+  <link rel="stylesheet" href="statics/css/skeleton.css">
+  <link rel="stylesheet" href="statics/css/custom_index.css">
+
+  <!-- Scripts
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="statics/js/custom_index.js"></script>
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="../../dist/images/favicon.png">
+
+
+
+</head>
+<body style="">
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <div class="section hero">
     <div class="container">
-
-        <!-- columns should be the immediate child of a .row -->
-        <div class="row logo">
-            <div align="center" class="one columns"><img src="statics/images/robot_1.png"></div>
-            <div align="center" class="ten columns"><h3>Campeonato de Robótica y Hackathon 2017</h3></div>
-        </div>
-
-        <!-- just use a number and class 'column' or 'columns' -->
-        <div class="row">
-            <div class="eight column"><h5>Formulario de Inscripción</h5></div>
-        </div>
-
-        <div class="row">
-            <div align="center" class="six columns">
-                <form>
-                        <div class="group">
-                            <h5>Datos del Robot</h5>
-                            <div class="six column">
-                                <label for="robot_nombre">*Nombre</label>
-                                <input class="u-full-width obligatorio" type="text" validador="robot" placeholder="3CPO" id="robot_nombre">
-                            </div>
-                            <div class="six column">
-                                <label for="robot_peso">*Peso (kg.)</label>
-                                <input class="u-full-width obligatorio" type="number" validador="number" placeholder="10" id="robot_peso">
-                            </div>
-                            <div class="six column">
-                                <label for="categoria_input">Categoria</label>
-                                <select class="u-full-width" id="categoria_input">
-                                    <option value="Option 1">Seguidor de Línea</option>
-                                    <option value="Option 2">Sumo</option>
-                                    <option value="Option 3">Mini-Sumo</option>
-                                    <option value="Option 4">Futbol</option>
-                                </select>
-                            </div>
-                            <div class="six column">
-                                <label for="escuela_input">Escuela</label>
-                                <select class="u-full-width" id="escuela_input">
-                                    <option value="Option 1">724</option>
-                                    <option value="Option 2">723</option>
-                                    <option value="Option 3">722</option>
-                                    <option value="Option 4">721</option>
-                                </select>
-                            </div>
-                        </div>
-                    </form>
+      <div class="row">
+        <div class="one-half column">
+          <h1 class="hero-heading"> Campeonato de Robótica y Hackathon 2017 </h1>
+          <p>Evento abierto y gratuito para todo público, en especial se invita a alumnos y docentes de nivel secundario y universitario. </p>
+          <h1 class="hero-heading"> 
+            <div id="contador">
 
             </div>
-            <div align="center" class="six columns">2/3</div>
+            <!-- Primary Page Layout 
+            <span id="dia">5</span>d
+            <span id="hora">5</span>h
+            <span id="min">2</span> m
+            <span id="seg">30</span>s
+            -->
+          </h1>
+          <!-- <a class="button button-primary" href="http://getskeleton.com">Try Skeleton</a> -->
+          <a class="button button-primary" href=" https://chpatagonia.eventbrite.com.ar">Reserva tu lugar</a> 
+          <a class="button button-primary" href="/registroRobots">Registra tu robot</a> 
         </div>
-        
-        <div class="row logo">
-            <div align="center" class="eleven column">
-                <h5 class="">Participantes</h5>
-                <div align="right">
-                    <div class="controles-tabla">
-                            <i id="control_mas" class="fa fa-plus" aria-hidden="true"></i>
-                            <i id="control_menos" class="fa fa-minus" aria-hidden="true"></i>
-                    </div>
-                </div>
-                <div style="overflow-x:auto;">
-                    <table id="tabla_participantes">
-                        <thead>
-                            <tr>
-                            <th>Rol</th>
-                            <th>Apellido y Nombre</th>
-                            <th>DNI</th>
-                            <th>E-mail</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="participante_obligatorio">
-                                <td> * Profesor/Responsable</td>
-                                <td><input class="obligatorio" validador="text" type="text" placeholder="Gonzales, Gerardo"></td>
-                                <td><input class="obligatorio" validador="number" type="number" placeholder="37067513"></td>
-                                <td><input class="obligatorio" validador="email" type="email" placeholder="geral@mail.com"></td>
-                            </tr>
-                            <tr class="participante_obligatorio">
-                                <td> * Alumno/Representante</td>
-                                <td><input class="obligatorio" validador="text" type="text" placeholder="Gonzales, Gerardo"></td>
-                                <td><input class="obligatorio" validador="number" type="number" placeholder="37067513"></td>
-                                <td><input class="obligatorio" validador="email" type="email" placeholder="geral@mail.com"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+        <div class="one-half column phones">
+          <!--
+          <img class="phone" src="images/iphone.png">
+          <img class="phone" src="images/iphone.png">
+          -->
+          <img class="phone" src="statics/images/robot_portada.png">
+          
         </div>
-        <div class="row">
-            <div align="center" class="eleven column">
-                <input id="inscribir" class="button-primary" type="button" value="Inscribir">
-            </div>
-        </div>
+      </div>
     </div>
-    </body>
+  </div>
+
+  <div class="section values">
+    <div class="container">
+      <h3 class="section-heading">Competencia</h3>
+      <br>
+      <div class="row">
+        <div class="one-third column value">
+          
+          <h5 class="value-heading">Seguidores de Línea</h5>
+          <p class="value-description">Percentage of users more likely to purchase on mobile friendly site.</p>
+          <a class="button button-primary" href="http://.com">Reglamento!</a>
+        </div>
+        <div class="one-third column value">
+          <h5 class="value-heading">Sumo y Mini-Sumo</h5>
+          <p class="value-description">Most of the world accesses the internet on multiple devices.</p>
+          <a class="button button-primary" href="http://.com">Reglamento!</a>
+        </div>
+        <div class="one-third column value">
+          <h5 class="value-heading">Futbol</h5>
+          <p class="value-description">Percentage of users that are frustrated with page load times.</p>
+          <a class="button button-primary" href="http://.com">Reglamento!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section get-help">
+    <div class="container">
+      <h3 class="section-heading">¿Organización?</h3>
+        <p class="section-description">
+            puede ir el video que hizo nahuel o tambien el logo de las escuelas que participan
+        </p>
+    </div>
+  </div>
+
+  
+
+  <div class="section categories">
+    <div class="container">
+      <h3 class="section-heading">¿Dónde se hace?</h3>
+      <p class="section-description">Aqui va el mapa.</p>
+      <!--
+      <div class="row">
+        <div class="one-half column category">
+          <img class="u-max-full-width" src="images/placeholder.png">
+        </div>
+        <div class="one-half column category">
+          <img class="u-max-full-width" src="images/placeholder.png">
+        </div>
+      </div>
+      -->
+    </div>
+  </div>
+
+
+
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
